A-AZURE-web/dep-api-identity.yaml
--- #service-api-identity
apiVersion: v1
kind: Service
metadata:
  name: service-api-identity
  namespace: web
spec:
  selector:
    app: api-identity-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
--- #api-identity-dep          
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-identity-dep
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-identity-pod
  template:
    metadata:
      labels:
        app: api-identity-pod
    spec:
      containers:
        - name: api-identity-cont
          image: alaahajri/service-api-identity:latest
