A-AZURE-web/dep-rabbitmq.yaml
--- # rabbitmq-service
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: web
spec:
  type: ClusterIP   
  ports:  # The name field is required when a service has more than one port.
  - port: 15672
    targetPort: 15672
    protocol: TCP
    name: management 
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: amqp
  selector:
    app: rabbitmq-pod
--- # rabbitmq-dep
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-dep
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-pod
  template:
    metadata:
      labels:
        app: rabbitmq-pod
    spec:
      containers:
      - name: rabbitmq-cont
        image: alaahajri/rabbitmq:3-management
        ports:
        - containerPort: 15672
        - containerPort: 5672   
        # resources:
        #   # requests:
        #   #   memory: "500Mi"
        #   #   cpu: "0.5"
        #   limits:
        #     memory: "1500Mi"
        #     cpu: "1"
