A-AZURE-web/dep-nginx-ingress-1.yaml
# problem fix : https://stackoverflow.com/questions/56723867/kubernetes-nginx-ingress-rabbitmq-management-and-kibana
# helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
# helm repo update
# helm install nginx-ingress ingress-nginx/ingress-nginx --namespace web --set controller.replicaCount=2
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ynovlab.ddns.net
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
            path: /     
    - host: rabbitmq.ynovlab.ddns.net     
      http:
        paths:           
          - pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15672
            path: /                      
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
            path: /       
                       
  tls:
    - hosts:
      - ynovlab.ddns.net
      - rabbitmq.ynovlab.ddns.net
      - kibana.ynovlab.ddns.net
      - grafana.ynovlab.ddns.net
      secretName: nginx-tls-secret                
--- # TLS Secret
apiVersion: v1
kind: Secret
metadata:
  name: web-nginx-tls-secret
  namespace: web
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlDOXpDQ0FkOENGQVIyWi9XcTZ6QU5DMDZ1WjZrUGczREt0cFk4TUEwR0NTcUdTSWIzRFFFQkN3VUFNRGd4DQpFakFRQmdOVkJBTU1DV3h2WTJGc2FHOXpkREVpTUNBR0NTcUdTSWIzRFFFSkFSWVRZV3hoWVM1b1lXcHlhVUI1DQpibTkyTG1OdmJUQWVGdzB5TXpBek1qa3lNakV4TUROYUZ3MHlOREF6TWpneU1qRXhNRE5hTURneEVqQVFCZ05WDQpCQU1NQ1d4dlkyRnNhRzl6ZERFaU1DQUdDU3FHU0liM0RRRUpBUllUWVd4aFlTNW9ZV3B5YVVCNWJtOTJMbU52DQpiVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFMK1hjV1pSWTFTQXUvczIzd0RaDQozOXZiS242a [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tDQpNSUlFdmdJQkFEQU5CZ2txaGtpRzl3MEJBUUVGQUFTQ0JLZ3dnZ1NrQWdFQUFvSUJBUUMvbDNGbVVXTlVnTHY3DQpOdDhBMmQvYjJ5cCtvOEZRU0h0SFdxTnkrSUtIUmd6S0duTXRMYWJlaHZ5anhSMFg2NTd2cEJkZDlNSHBhN0d0DQpxN1VjZmVYcWRzN3EvZWpmNkxSaXJtcXE1azJEUE02ZWJoWFNlZS9YTHJ0TmtrNG9TRk9VSXJWTHAwQUZxWnJwDQo2RnJjNS85SnlEdUZBZVgyL25nUVo1RDRUaXZ5cUc2aFBkZFZ4U1FPL294QmZBZWllYjVhT2tNa0ZsVUxVaHpxDQp3OGVJZlBpc2ZYREVlWkljL2dLdUg2eFJUV1BiYWhzS1p4NEE0RFlKV04yOU50MGFsUDkwUGdqUVBVbXdwcWY0DQpPU3pzY1JQU [...]

           # - rabbitmq.localhost
      # - prometheus.localhost
      # - grafana.localhost     

    # - host: statemetrics.localhost
    #   http:
    #     paths:               
    #       - pathType: Prefix
    #         backend:
    #           service:
    #             name: prometheus-kube-state-metrics
    #             port:
    #               number: 8080
    #         path: /             
    # - host: prometheus.localhost
    #   http:
    #     paths:               
    #       - pathType: Prefix
    #         backend:
    #           service:
    #             name: prometheus-server
    #             port:
    #               number: 9090
    #         path: /  
    # - host: grafana.localhost
    #   http:
    #     paths:               
    #       - pathType: Prefix
    #         backend:
    #           service:
    #             name: prometheus-grafana
    #             port:
    #               number: 80
    #         path: /
