A-AZURE-web/dep-nginx-ingress-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kibana.ynovlab.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana2-kibana
            port:
              number: 5601
  tls:
    - hosts:
      - ynovlab.ddns.net
      - rabbitmq.ynovlab.ddns.net
      - kibana.ynovlab.ddns.net
      - grafana.ynovlab.ddns.net
      secretName: nginx-tls-secret
